<resources>
    <string name="app_name">HeathCare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_scanning">Scanning Device</string>
    <string name="action_starting">Starting</string>
    <string name="action_locking">Locking</string>
    <string name="action_stopping">Stopping</string>

    <string name="send">보내기</string>
    <string name="not_connected">다른 단말에 연결되어 있지 않습니다.</string>
    <string name="bt_not_enabled_leaving">블루투스를 사용할 수 없도록 설정되어 있습니다. 앱을 종료합니다.</string>
    <string name="title_connecting">연결중입니다...</string>
    <string name="title_connected_to">연결되었습니다.</string>
    <string name="title_not_connected">연결되지 않았습니다.</string>

    <string name="scanning">단말을 검색중입니다...</string>
    <string name="select_device">연결할 단말을 선택하세요.</string>
    <string name="none_paired">페어링된 단말을 찾을 수 없습니다.</string>
    <string name="none_found">단말을 찾을 수 없습니다.</string>
    <string name="title_paired_devices">페어링된 단말</string>
    <string name="title_other_devices">사용가능한 다른 단말</string>
    <string name="button_scan">단말 검색하기</string>

    <string name="secure_connect">단말 연결하기 - (Secure 모드)</string>
    <string name="insecure_connect">단말 연결하기 - (Insecure 모드)</string>
    <string name="discoverable">이 단말을 검색가능한 상태로 만들기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_connect">Connect</string>

    <string name="license">
        greenrobot eventbus
        Copyright (C) 2012-2016 Markus Junginger, greenrobot (http://greenrobot.org)

EventBus binaries and source code can be used according to the Apache License, Version 2.0.</string>

</resources>
